# make_gtfs

./: .Pipfile.swp  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  Pipfile  Pipfile.lock.orig  Pipfile.orig  README.rst  README.rst.orig  feed.py  make_gtfs.ipynb  make_gtfs.py  pyproject.toml  requirements.txt  setup.py  travis.yml
.github/workflows/: test.yml
.ipynb_checkpoints/: make_gtfs-checkpoint.ipynb
.pytest_cache/v/cache/: lastfailed  nodeids
data/auckland/: agency.txt  calendar.txt  frequencies.csv  meta.csv  routes.csv  routes.txt  service_windows.csv  shapes.geojson  shapes.txt  speed_zones.geojson  stop_times.txt  stops.csv  stops.geojson  stops.txt  trips.txt
data/auckland_light/: frequencies.csv  meta.csv
data/auckland_snippet/: config.json  routes.csv  stop_times.txt  stops.txt
data/auckland_wonky/: service_windows.csv  shapes.geojson
docs/: Makefile  conf.py  index.rst  modules.rst
docs/_build/doctrees/: environment.pickle  index.doctree  make_gtfs.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  make_gtfs.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/singlehtml/: .buildinfo  index.html  objects.inv
examples/: .gitignore  config.json  examples.html  examples.ipynb  examples.ipynb.orig  junk.ipynb  routes.csv  shapes.geojson
examples/.ipynb_checkpoints/: examples-checkpoint.ipynb  examples-checkpoint.ipynb.orig  junk-checkpoint.ipynb
examples/auckland_snippet/: shapes.geojson
examples/test/: config.json  routes.csv
examples/test/this_is_a_tmp_dir/: calendar.txt  stop_times.txt  stops.txt  trips.txt
ipynb/: examples.ipynb  prototyping.ipynb
make_gtfs/: __init__.py  cli.py  constants.py  hashables.py  main.py  main_alt.py  make_gtfs.py  protofeed.py  protofeed_alt.py  validators.py
notebooks/: examples.ipynb  prototying.ipynb  prototying_speed_zones.ipynb  prototype_speed_zones.ipynb  prototypes.ipynb
tests/: context.py  test_cli.py  test_main.py  test_protofeed.py  test_validators.py  tests.py  validators.py
